### add test for parser

### normal parser
add_executable(testParser \\
../../parser/ObjectSlot.cpp \\
../../parser/Frame.cpp \\
../../parser/FunctionTable.cpp \\
../../parser/Workspace.cpp \\
../../parser/SyntaxElement.cpp \\
../../parser/SyntaxAssignExpr.cpp \\
../../parser/SyntaxBinaryExpr.cpp \\
../../parser/SyntaxClassDef.cpp \\
../../parser/SyntaxConstant.cpp \\
../../parser/SyntaxForCondition.cpp \\
../../parser/SyntaxFormal.cpp \\
../../parser/SyntaxFunctionCall.cpp \\
../../parser/SyntaxFunctionDef.cpp \\
../../parser/SyntaxLabeledExpr.cpp \\
../../parser/SyntaxStatement.cpp \\
../../parser/SyntaxUnaryExpr.cpp \\
../../parser/SyntaxVariable.cpp \\
../../parser/Parser.cpp \\
../../parser/lex.yy.cpp \\
../../parser/grammar.tab.cpp \\
../../ui/UserInterface.cpp \\
../../datatypes/RbObject.cpp \\
../../datatypes/RbInternal.cpp \\
../../datatypes/RbUndefined.cpp \\
../../datatypes/primitive/RbDouble.cpp \\
../../datatypes/primitive/RbInt.cpp \\
../../datatypes/primitive/RbBool.cpp \\
../../datatypes/complex/RbComplex.cpp \\
../../datatypes/complex/MethodDescr.cpp \\
../../datatypes/complex/MethodTable.cpp \\
../../datatypes/complex/RbString.cpp \\
../../datatypes/complex/StringVector.cpp \\
../../datatypes/complex/IntVector.cpp \\
../../datatypes/complex/Vector.cpp \\
../../datatypes/complex/Simplex.cpp \\
../../functions/Argument.cpp \\
../../functions/ArgumentRule.cpp \\
../../functions/Ellipsis.cpp \\
../../functions/RbFunction.cpp \\
../../functions/UserFunction.cpp \\
../../dag/RbObjectWrapper.cpp \\
../../dag/DAGNodeContainer.cpp \\
../../dag/ContainerIterator.cpp \\
../../dag/DAGNode.cpp  \\
../../dag/ConstantNode.cpp \\
../../dag/StochasticNode.cpp \\
../../dag/DeterministicNode.cpp \\
../../moves/objects/RbMove.cpp \\
../../moves/RbMoveSchedule.cpp \\
../../distributions/Distribution.cpp \\
../../main/RbMonitor.cpp \\
../../utils/RbException.cpp \\
../../utils/RandomNumberGenerator.cpp \\
testParser.cpp)
